# test-wasm-plugin

./: Cargo.toml  README.md  test-plugin.wit
plugin-concat/: Cargo.toml
plugin-concat/src/: bindings.rs  lib.rs
src/: lib.rs
wasmtime/: Cargo.toml
wasmtime/src/: bindings.rs  main.rs
web/: Cargo.toml
web/js/: test-plugin.d.ts  test-plugin.js
web/src/: lib.rs
web/tests/: test.rs
