[package]
name = "wasm-plugin-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-plugin = { path = ".." }
wasmtime = "0.33"
anyhow = "1"
argh = "0.1"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
