[package]
name = "wasm-plugin-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wasm-plugin = { path = ".." }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.55"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = [ "cdylib", "lib" ]
